backend/src/main/java/com/example/backend/jenkins/error/model/dto/RetryReqDto.java
package com.example.backend.jenkins.error.model.dto;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;

import java.util.UUID;

@Getter
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class RetryReqDto {
    private UUID jobId;
}
